# beta_lib

./: README.md
python/: Cargo.toml  README.md
python/src/: lib.rs
rust/: Cargo.toml
rust/src/: lib.rs  nelder_mead.rs  statistics.rs
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
