[package]
name = "beta"
version = "0.1.0"
edition = "2021"

[lib]
name = "beta"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beta_lib = { path = "../rust" }
pyo3 = { version = "0.16.2", features = ["extension-module"] }
